--- a/Bowling Scoring System/Resource1.resx
+++ b/Bowling Scoring System/Resource1.resx
@@ -184,4 +184,7 @@
   <data name="soundEnable" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\soundEnable.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="backButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\backButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
