--- a/Bowling Scoring System/Resource1.resx
+++ b/Bowling Scoring System/Resource1.resx
@@ -187,4 +187,10 @@
   <data name="backButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\backButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="loadButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\loadButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="saveButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\saveButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
