--- a/Bowling Scoring System/Resource1.resx
+++ b/Bowling Scoring System/Resource1.resx
@@ -193,4 +193,7 @@
   <data name="saveButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\saveButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="helpButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\helpButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
